[bp/r29714][FIX] Trackers: jscalendar fields popping up invisible or partly invisible due to lower z-index than tabs (0<1).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/proposals@29715 b456876b-0849-0410-b77d-98878d47e9d5

--- a/5.x/css/jscalendar.css
+++ b/5.x/css/jscalendar.css
@@ -11,3 +11,7 @@
 .daterow:active {
 	border : 1px inset #ddd;
 }
+
+.calendar {
+	z-index: 6;
+}
